--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-APP_NAME = Demo
-APP_PORT = 3200
+APP_NAME = Micra
+APP_REST_SERVER_PORT = 3200
 
 APP_LOCALE = en
 
 APP_MODE = debug
 APP_LOG_LEVEL = 3
 APP_CONSOLE_LOG = true
-APP_FILE_LOG = false
+APP_FILE_LOG = true
+APP_FILE_LOG_DIR = ./logs
 
-APP_QUEUE_NAME = default;
+APP_QUEUE_NAME = default
+APP_QUEUE_RETRIES = 3
+APP_QUEUE_REMOVE_FAILED = false
