--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bullmq": "^1.24.3",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "i18n": "^0.13.2"
+    "i18n": "^0.13.2",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
