Adding multiqueue funcionality

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,6 @@ APP_CONSOLE_LOG = true
 APP_FILE_LOG = true
 APP_FILE_LOG_DIR = ./logs
 
-APP_QUEUE_NAME = default
+APP_DEFAULT_QUEUE = default
 APP_QUEUE_RETRIES = 3
 APP_QUEUE_REMOVE_FAILED = false
