--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ APP_REST_SERVER_PORT = 3200
 
 APP_LOCALE = en
 
+DB_DRIVER = postgresql
+DB_NAME = micra
+BD_PREFIX =
+
 APP_MODE = debug
 APP_LOG_LEVEL = 3
 APP_CONSOLE_LOG = true
