--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@mikro-orm/core": "^4.5.5",
+    "@mikro-orm/postgresql": "^4.5.5",
+    "@mikro-orm/reflection": "^4.5.5",
     "axios": "^0.21.1",
     "bullmq": "^1.24.3",
     "dotenv": "^8.6.0",
