Adding redis config to .env

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ DB_DRIVER = postgresql
 DB_NAME = micra
 BD_PREFIX =
 
+REDIS_HOST = 127.0.0.1
+REDIS_PASSWORD =
+REDIS_PORT = 6379
+
 APP_MODE = debug
 APP_LOG_LEVEL = 3
 APP_CONSOLE_LOG = true
