--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,17 @@ APP_REST_SERVER_PORT = 3200
 
 APP_LOCALE = en
 
-DB_DRIVER = postgresql
-DB_NAME = micra
+DB_TYPE = postgresql
+DB_DATABASE = micra
 BD_PREFIX =
+DB_HOST = 127.0.0.1
+DB_PORT = 5432
+DB_USERNAME = postgres
+DB_PASSWORD = postgres
+
+APP_DEFAULT_QUEUE = default
+APP_QUEUE_RETRIES = 3
+APP_QUEUE_REMOVE_FAILED = false
 
 REDIS_HOST = 127.0.0.1
 REDIS_PASSWORD =
@@ -16,7 +24,3 @@ APP_LOG_LEVEL = 3
 APP_CONSOLE_LOG = true
 APP_FILE_LOG = true
 APP_FILE_LOG_DIR = ./logs
-
-APP_DEFAULT_QUEUE = default
-APP_QUEUE_RETRIES = 3
-APP_QUEUE_REMOVE_FAILED = false
