--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "micra",
   "version": "1.0.0",
   "description": "NodeJS + Redis microservices framework",
+  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "git://github.com/systemson/micra.git"
   },
-  "main": "server.ts",
+  "main": "./build/server.js",
   "scripts": {
-    "serve": "nodemon server.ts",
-    "build": "tsc --project ./ && nexe ./build/server.js -r ./build/src/**/* ./node_modules/**/* -t windows-x64-12.18.2 -o ./build/app.exe",
+    "serve": "nodemon server.ts --ignore ./assets/ --ignore ./temp/",
+    "build": "tsc --project ./ && nexe ./build/server.js -r ./build/src/**/* ./node_modules/**/* -o ./app.exe --verbose",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,24 +18,25 @@
   "author": "",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@mikro-orm/core": "^4.5.5",
-    "@mikro-orm/postgresql": "^4.5.5",
-    "@mikro-orm/reflection": "^4.5.5",
+    "@mikro-orm/core": "^4.5.6",
+    "@mikro-orm/postgresql": "^4.5.6",
+    "@mikro-orm/reflection": "^4.5.6",
     "@types/redis": "^2.8.29",
     "axios": "^0.21.1",
-    "bullmq": "^1.24.3",
+    "bullmq": "^1.31.1",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "i18n": "^0.13.2",
-    "moment": "^2.29.1"
+    "i18n": "^0.13.3",
+    "moment": "^2.29.1",
+    "nexe": "^4.0.0-beta.18"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "@types/i18n": "^0.13.0",
-    "@types/node": "^14.14.44",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "eslint": "^7.25.0",
-    "typescript": "^4.2.4"
+    "@types/node": "^14.17.2",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.28.0",
+    "typescript": "^4.3.2"
   }
 }
