--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ DB_PASSWORD = postgres
 
 APP_DEFAULT_QUEUE = default
 APP_QUEUE_RETRIES = 3
+APP_QUEUE_CONCURRENCY = 1
 APP_QUEUE_REMOVE_FAILED = false
 
 REDIS_HOST = 127.0.0.1
