--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
     "@mikro-orm/reflection": "^4.5.6",
     "@types/redis": "^2.8.29",
     "axios": "^0.21.1",
-    "bullmq": "^1.31.1",
+    "bullmq": "^1.32.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "i18n": "^0.13.3",
-    "moment": "^2.29.1",
-    "nexe": "^4.0.0-beta.18"
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/i18n": "^0.13.0",
-    "@types/node": "^14.17.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@types/node": "^14.17.3",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
+    "nexe": "^4.0.0-beta.18",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
 }
