Better error handling in routes

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ REDIS_HOST = 127.0.0.1
 REDIS_PASSWORD =
 REDIS_PORT = 6379
 
-APP_MODE = debug
+APP_MODE = develop
 APP_LOG_LEVEL = 3
 APP_CONSOLE_LOG = true
 APP_FILE_LOG = true
