--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 APP_NAME = Micra
 APP_REST_SERVER_PORT = 3200
 
-APP_LOCALE = en
+APP_DEFAULT_LOCALE = en
+APP_LOCALES = en,es
 
 DB_TYPE = postgresql
 DB_DATABASE = micra
