--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "./build/server.js",
   "scripts": {
     "serve": "nodemon server.ts",
-    "build": "tsc --project ./ && nexe ./build/server.js -r ./build/src/**/* -o ./app.exe --verbose",
+    "build": "tsc --project ./ && nexe ./build/**/* -o ./app.exe --verbose",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,7 +24,7 @@
     "@types/ioredis": "^4.26.4",
     "@types/redis": "^2.8.29",
     "axios": "^0.21.1",
-    "bullmq": "^1.34.2",
+    "bullmq": "^1.36.1",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "i18n": "^0.13.3",
@@ -35,10 +35,10 @@
     "@types/express": "^4.17.12",
     "@types/i18n": "^0.13.0",
     "@types/node": "^14.17.3",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
-    "nexe": "^3.3.7",
+    "nexe": "^4.0.0-beta.18",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
