--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "tsc --project ./ && nexe ./build/**/* -o ./app.exe --verbose",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=html mocha"
   },
   "author": "",
   "license": "GPL-3.0-or-later",
@@ -32,15 +32,21 @@
     "luxon": "^1.27.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.19",
     "@types/express": "^4.17.12",
     "@types/i18n": "^0.13.0",
     "@types/luxon": "^1.27.0",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.17.4",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "chai": "^4.3.4",
     "eslint": "^7.29.0",
+    "faker": "^5.5.3",
+    "mocha": "^9.0.1",
     "nexe": "^4.0.0-beta.18",
     "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   },
