Migrating ORM to typeorm

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ DB_HOST = 127.0.0.1
 DB_PORT = 5432
 DB_USERNAME = postgres
 DB_PASSWORD = postgres
+DB_SCHEMA = public
 
 APP_DEFAULT_QUEUE = default
 APP_QUEUE_RETRIES = 3
@@ -20,6 +21,9 @@ APP_QUEUE_REMOVE_FAILED = false
 REDIS_HOST = 127.0.0.1
 REDIS_PASSWORD =
 REDIS_PORT = 6379
+
+APP_CACHE_DRIVER = redis
+APP_CACHE_PREFIX = _micra_
 
 APP_MODE = develop
 APP_LOG_LEVEL = 3
