--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_REST_SERVER_PORT = 3200
 APP_DEFAULT_LOCALE = en
 APP_LOCALES = en,es
 
-DB_TYPE = postgresql
+DB_TYPE = postgres
 DB_DATABASE = micra
 BD_PREFIX =
 DB_HOST = 127.0.0.1
@@ -15,6 +15,8 @@ DB_SCHEMA = public
 
 APP_DEFAULT_QUEUE = default
 APP_QUEUE_RETRIES = 3
+APP_QUEUE_RETRY_STRATEGY = none
+APP_QUEUE_RETRY_DELAY = 1000
 APP_QUEUE_CONCURRENCY = 1
 APP_QUEUE_REMOVE_FAILED = false
 
