--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ APP_QUEUE_RETRY_STRATEGY = none
 APP_QUEUE_RETRY_DELAY = 1000
 APP_QUEUE_CONCURRENCY = 1
 APP_QUEUE_REMOVE_FAILED = false
+APP_QUEUE_REMOVE_FAILED_ON_START = false
 
 REDIS_HOST = 127.0.0.1
 REDIS_PASSWORD =
