--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DB_SCHEMA = public
 
 APP_DEFAULT_QUEUE = default
 APP_QUEUE_PREFIX = micra
+APP_QUEUE_RETRIES = 3
 APP_QUEUE_RETRY_STRATEGY = none
 APP_QUEUE_RETRY_DELAY = 1000
 APP_QUEUE_CONCURRENCY = 1
