--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,9 @@ APP_QUEUE_PREFIX = micra
 APP_QUEUE_RETRIES = 3
 APP_QUEUE_RETRY_STRATEGY = none
 APP_QUEUE_RETRY_DELAY = 1000
-APP_QUEUE_CONCURRENCY = 1
+APP_QUEUE_JOB_CONCURRENCY = 1
+APP_QUEUE_WORKERS_CONCURRENCY = 1
+APP_QUEUE_REMOVE_COMPLETED = true
 APP_QUEUE_REMOVE_FAILED = false
 APP_QUEUE_REMOVE_FAILED_ON_START = false
 
