--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "main": "./build/server.js",
   "scripts": {
-    "serve:dev": "nodemon server.ts",
-    "serve": "ts-node --transpile-only ./server.ts",
-    "build": "tsc --project ./ && nexe ./build/**/* -o ./app.exe --verbose",
+    "serve:dev": "SET NODE_ENV=development && nodemon server.ts",
+    "serve:compile": "npm run compile && SET NODE_ENV=compiled && node ./build/server.js",
+    "serve": "SET NODE_ENV=production && ts-node --transpile-only ./server.ts",
+    "compile": "tsc --project ./",
+    "build": "npm run compile && nexe ./build/**/* -o ./app.exe --verbose",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha",
@@ -21,29 +23,29 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.21.1",
-    "bullmq": "^1.39.2",
+    "bullmq": "^1.40.1",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "i18n": "^0.13.3",
     "ioredis": "^4.27.6",
     "moment": "^2.29.1",
-    "pg": "^8.6.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.35"
   },
   "devDependencies": {
     "@types/chai": "^4.2.21",
     "@types/express": "^4.17.13",
     "@types/i18n": "^0.13.1",
-    "@types/ioredis": "^4.26.5",
+    "@types/ioredis": "^4.26.6",
     "@types/luxon": "^1.27.1",
     "@types/mocha": "^8.2.3",
-    "@types/node": "^14.17.5",
+    "@types/node": "^14.17.6",
     "@types/redis": "^2.8.31",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "chai": "^4.3.4",
-    "eslint": "^7.30.0",
+    "eslint": "^7.31.0",
     "faker": "^5.5.3",
     "mocha": "^8.4.0",
     "nexe": "^4.0.0-beta.18",
