--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve:compiled": "npm run compile && SET NODE_ENV=compiled && node ./build/server.js",
     "serve": "SET NODE_ENV=production && ts-node --transpile-only ./server.ts",
     "compile": "tsc --project ./",
-    "build": "npm run compile && nexe ./build/**/* -o ./app.exe --verbose",
+    "build": "npm run compile && SET NODE_ENV=compiled && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha",
@@ -27,11 +27,11 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "i18n": "^0.13.3",
-    "ioredis": "^4.27.6",
+    "ioredis": "^4.27.7",
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.35"
+    "typeorm": "^0.2.36"
   },
   "devDependencies": {
     "@types/chai": "^4.2.21",
@@ -40,17 +40,17 @@
     "@types/ioredis": "^4.26.6",
     "@types/luxon": "^1.27.1",
     "@types/mocha": "^8.2.3",
-    "@types/node": "^14.17.6",
+    "@types/node": "^14.17.9",
     "@types/redis": "^2.8.31",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "chai": "^4.3.4",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "faker": "^5.5.3",
     "mocha": "^8.4.0",
-    "nexe": "^4.0.0-beta.18",
     "nodemon": "^2.0.12",
     "nyc": "^15.1.0",
+    "pkg": "^5.3.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.5"
   },
