--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_REST_SERVER_PORT = 3200
 
 APP_DEFAULT_LOCALE = en
 APP_LOCALES = en,es
+APP_STORAGE_DIR = ./storage
 
 DB_TYPE = postgres
 DB_DATABASE = micra
@@ -29,10 +30,11 @@ REDIS_PASSWORD =
 REDIS_PORT = 6379
 
 APP_CACHE_DRIVER = redis
-APP_CACHE_PREFIX = _micra_
+APP_FILE_CACHE_DIR = ./${APP_STORAGE_DIR}/cache
+APP_REDIS_CACHE_PREFIX = _micra_
 
 APP_MODE = develop
 APP_LOG_LEVEL = 3
 APP_CONSOLE_LOG = true
 APP_FILE_LOG = true
-APP_FILE_LOG_DIR = ./logs
+APP_FILE_LOG_DIR = ./${APP_STORAGE_DIR}/logs
