--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "nodemonConfig": {
     "watch": [
       "server.ts",
