--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "main": "./build/server.js",
   "scripts": {
-    "serve": "SET NODE_ENV=production && ts-node --transpile-only ./server.ts",
-    "serve:dev": "SET NODE_ENV=development && nodemon server.ts",
+    "serve": "(export NODE_ENV=production || SET NODE_ENV=production) && ts-node --transpile-only ./server.ts",
+    "serve:dev": "(export NODE_ENV=development || SET NODE_ENV=development) && nodemon server.ts",
     "build": "tsc --project ./",
-    "start": "npm run build && SET NODE_ENV=compiled && node ./build/server.js",
-    "compile": "npm run build && SET NODE_ENV=compiled && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
+    "start": "npm run build && (export NODE_ENV=compiled || SET NODE_ENV=compiled) && node ./build/server.js",
+    "compile": "npm run build && (export NODE_ENV=compiled || SET NODE_ENV=compiled) && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha",
