--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.36"
+    "typeorm": "^0.2.36",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/chai": "^4.2.21",
@@ -53,8 +54,7 @@
     "nodemon": "^2.0.12",
     "nyc": "^15.1.0",
     "pkg": "^5.3.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.5"
+    "ts-node": "^9.1.1"
   },
   "nodemonConfig": {
     "watch": [
