--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.36",
-    "typescript": "^4.3.5"
-  },
-  "devDependencies": {
+    "typescript": "^4.3.5",
     "@types/chai": "^4.2.21",
     "@types/express": "^4.17.13",
     "@types/i18n": "^0.13.1",
@@ -45,6 +43,9 @@
     "@types/mocha": "^8.2.3",
     "@types/node": "^14.17.9",
     "@types/redis": "^2.8.31",
+    "ts-node": "^9.1.1"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "chai": "^4.3.4",
@@ -53,8 +54,7 @@
     "mocha": "^8.4.0",
     "nodemon": "^2.0.12",
     "nyc": "^15.1.0",
-    "pkg": "^5.3.1",
-    "ts-node": "^9.1.1"
+    "pkg": "^5.3.1"
   },
   "nodemonConfig": {
     "watch": [
