--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha",
-    "coverage": "nyc --reporter=html npm run test"
+    "coverage": "nyc --reporter=html npm run test",
+    "postinstall" : "cp .env.example .env"
   },
   "author": "",
   "license": "GPL-3.0-or-later",
