--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "main": "./build/server.js",
   "scripts": {
     "serve:dev": "SET NODE_ENV=development && nodemon server.ts",
-    "serve:compiled": "npm run compile && SET NODE_ENV=compiled && node ./build/server.js",
+    "start": "npm run build && SET NODE_ENV=compiled && node ./build/server.js",
     "serve": "SET NODE_ENV=production && ts-node --transpile-only ./server.ts",
-    "compile": "tsc --project ./",
-    "build": "npm run compile && SET NODE_ENV=compiled && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
+    "build": "tsc --project ./",
+    "compile": "npm run build && SET NODE_ENV=compiled && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha",
     "coverage": "nyc --reporter=html npm run test"
   },
-  "author": "",
+  "author": "Deivi Peña",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.21.1",
@@ -32,9 +32,7 @@
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.36"
-  },
-  "devDependencies": {
+    "typeorm": "^0.2.36",
     "@types/chai": "^4.2.21",
     "@types/express": "^4.17.13",
     "@types/i18n": "^0.13.1",
@@ -43,6 +41,10 @@
     "@types/mocha": "^8.2.3",
     "@types/node": "^14.17.9",
     "@types/redis": "^2.8.31",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.3.5"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "chai": "^4.3.4",
@@ -51,9 +53,7 @@
     "mocha": "^8.4.0",
     "nodemon": "^2.0.12",
     "nyc": "^15.1.0",
-    "pkg": "^5.3.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.5"
+    "pkg": "^5.3.1"
   },
   "nodemonConfig": {
     "watch": [
