--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "micra",
+  "name": "ant",
   "version": "1.0.0",
   "description": "NodeJS + Redis tiny microservices framework",
   "type": "commonjs",
   "repository": {
     "type": "git",
-    "url": "git://github.com/systemson/micra.git"
+    "url": "git://github.com/systemson/ant.git"
   },
   "main": "./build/server.js",
   "scripts": {
@@ -22,8 +22,16 @@
   "author": "Deivi Peña",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@types/chai": "^4.2.21",
+    "@types/express": "^4.17.13",
+    "@types/i18n": "^0.13.1",
+    "@types/ioredis": "^4.26.7",
+    "@types/luxon": "^1.27.1",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^14.17.9",
+    "@types/redis": "^2.8.31",
     "axios": "^0.21.1",
-    "bullmq": "^1.40.1",
+    "bullmq": "^1.40.4",
     "dotenv": "^8.6.0",
     "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
@@ -32,21 +40,13 @@
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.36",
-    "@types/chai": "^4.2.21",
-    "@types/express": "^4.17.13",
-    "@types/i18n": "^0.13.1",
-    "@types/ioredis": "^4.26.6",
-    "@types/luxon": "^1.27.1",
-    "@types/mocha": "^8.2.3",
-    "@types/node": "^14.17.9",
-    "@types/redis": "^2.8.31",
     "ts-node": "^9.1.1",
+    "typeorm": "^0.2.36",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "faker": "^5.5.3",
