--- a/.env.example
+++ b/.env.example
@@ -36,5 +36,5 @@ APP_REDIS_CACHE_PREFIX = ${APP_NAME}_c
 APP_LOG_LEVEL = 3
 APP_CONSOLE_LOG = true
 APP_FILE_LOG = true
-APP_DB_LOG = true
+APP_DB_LOG = false
 APP_FILE_LOG_DIR = ./${APP_STORAGE_DIR}/logs
