--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/redis": "^2.8.31",
     "axios": "^0.21.1",
     "bullmq": "^1.40.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
@@ -45,6 +46,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "chai": "^4.3.4",
