--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ DB_PORT = 5432
 DB_USERNAME = postgres
 DB_PASSWORD = postgres
 DB_SCHEMA = public
+BD_DEBUG = false
 
 APP_DEFAULT_QUEUE = default
 APP_QUEUE_PREFIX = ${APP_NAME}_q
@@ -34,7 +35,6 @@ APP_FILE_CACHE_DIR = ./${APP_STORAGE_DIR}/cache
 APP_REDIS_CACHE_PREFIX = ${APP_NAME}_c
 
 APP_LOG_LEVEL = 3
-APP_CONSOLE_LOG = true
-APP_FILE_LOG = true
-APP_DB_LOG = false
+APP_LOG_DRIVER=console,file
+APP_CLEAR_LOG_ON_START = true
 APP_FILE_LOG_DIR = ./${APP_STORAGE_DIR}/logs
