Minor bugfix in queue names

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,8 @@ DB_PASSWORD = postgres
 DB_SCHEMA = public
 BD_DEBUG = false
 
-APP_DEFAULT_QUEUE = default
-APP_QUEUE_PREFIX = ${APP_NAME}_q
+APP_DEFAULT_QUEUE = ${APP_NAME}_default
+APP_QUEUE_GROUP =
 APP_QUEUE_RETRIES = 3
 APP_QUEUE_RETRY_STRATEGY = none
 APP_QUEUE_RETRY_DELAY = 1000
