--- a/.env.example
+++ b/.env.example
@@ -36,5 +36,5 @@ APP_REDIS_CACHE_PREFIX = ${APP_NAME}_c
 
 APP_LOG_LEVEL = 3
 APP_LOG_DRIVER=console,file
-APP_CLEAR_LOG_ON_START = true
+APP_CLEAR_LOG_ON_START = false
 APP_FILE_LOG_DIR = ./${APP_STORAGE_DIR}/logs
