--- a/package.json
+++ b/package.json
@@ -9,54 +9,52 @@
   },
   "main": "./build/server.js",
   "scripts": {
-    "serve:dev": "(export NODE_ENV=development || SET NODE_ENV=development) && nodemon server.ts",
-    "start": "npm run build && (export NODE_ENV=compiled || SET NODE_ENV=compiled) && node ./build/server.js",
-    "serve": "(export NODE_ENV=production || SET NODE_ENV=production) && ts-node --transpile-only ./server.ts",
+    "serve:dev": "nodemon server.ts",
+    "start": "npm run build && node ./build/server.js",
+    "serve": "ts-node --transpile-only ./server.ts",
     "build": "tsc --project ./",
-    "compile": "npm run build && (export NODE_ENV=compiled || SET NODE_ENV=compiled) && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
+    "compile": "npm run build && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint-fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha",
-    "coverage": "nyc --reporter=html npm run test",
-    "postinstall": "cp .env.example .env"
+    "coverage": "nyc --reporter=html npm run test"
   },
   "author": "Deivi Peña",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
-    "@types/i18n": "^0.13.1",
-    "@types/ioredis": "^4.27.8",
-    "@types/luxon": "^1.27.1",
-    "@types/mocha": "^8.2.3",
-    "@types/node": "^14.17.32",
+    "@types/i18n": "^0.13.2",
+    "@types/ioredis": "^4.28.7",
+    "@types/node": "^14.18.5",
     "@types/redis": "^2.8.32",
     "axios": "^0.21.4",
-    "bullmq": "^1.50.5",
+    "bullmq": "^1.64.0",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "dotenv-expand": "^5.1.0",
-    "express": "^4.17.1",
-    "i18n": "^0.13.3",
-    "ioredis": "^4.28.0",
+    "express": "^4.17.2",
+    "i18n": "^0.13.4",
+    "ioredis": "^4.28.2",
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
-    "typeorm": "^0.2.38",
-    "typescript": "^4.4.4"
+    "typeorm": "^0.2.41",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
+    "@types/mocha": "^8.2.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "faker": "^5.5.3",
     "mocha": "^8.4.0",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
-    "pkg": "^5.4.0"
+    "pkg": "^5.5.1"
   },
   "nodemonConfig": {
     "watch": [
