--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ant",
-  "version": "1.0.0",
+  "name": "@ant/ant",
+  "version": "2.0.0",
   "description": "NodeJS + Redis tiny microservices framework",
   "type": "commonjs",
   "repository": {
@@ -22,25 +22,8 @@
   "author": "Deivi Peña",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/i18n": "^0.13.2",
-    "@types/ioredis": "^4.28.7",
-    "@types/node": "^14.18.5",
-    "@types/redis": "^2.8.32",
-    "axios": "^0.21.4",
-    "bullmq": "^1.64.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
-    "dotenv-expand": "^5.1.0",
-    "express": "^4.17.2",
-    "i18n": "^0.13.4",
-    "ioredis": "^4.28.2",
-    "moment": "^2.29.1",
-    "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^9.1.1",
-    "typeorm": "^0.2.41",
-    "typescript": "^4.5.4"
+    "@ant/framework": "github:systemson/ant_framework",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
@@ -48,10 +31,10 @@
     "@types/mocha": "^8.2.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "eslint": "^7.32.0",
     "faker": "^5.5.3",
-    "mocha": "^9.1.4",
+    "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
     "pkg": "^5.5.2"
