--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@ant/framework": "github:systemson/ant_framework",
     "compression": "^1.7.4",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
@@ -40,6 +41,10 @@
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
     "pkg": "^5.5.2"
+  },
+  "engines": {
+    "node": "^12",
+    "npm": "^6"
   },
   "nodemonConfig": {
     "watch": [
