Adding kafka's consumer-producer funcionality

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,45 @@
-APP_NAME = Ant
-APP_REST_SERVER_PORT = 3200
+APP_NAME=Ant
+APP_REST_SERVER_PORT=3200
 
-APP_DEFAULT_LOCALE = en
-APP_LOCALES = en,es
-APP_STORAGE_DIR = ./storage
+APP_DEFAULT_LOCALE=en
+APP_LOCALES=en,es
+APP_STORAGE_DIR=./storage
 
-DB_TYPE = postgres
-DB_DATABASE = ant
-BD_PREFIX =
-DB_HOST = 127.0.0.1
-DB_PORT = 5432
-DB_USERNAME = postgres
-DB_PASSWORD = postgres
-DB_SCHEMA = public
-BD_DEBUG = false
+DB_TYPE=postgres
+DB_DATABASE=ant
+BD_PREFIX=
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_SCHEMA=public
+BD_DEBUG=false
 
-APP_DEFAULT_QUEUE = ${APP_NAME}_default
-APP_QUEUE_GROUP =
-APP_QUEUE_RETRIES = 3
-APP_QUEUE_RETRY_STRATEGY = none
-APP_QUEUE_RETRY_DELAY = 1000
-APP_QUEUE_JOB_CONCURRENCY = 1
-APP_QUEUE_WORKERS_CONCURRENCY = 1
-APP_QUEUE_REMOVE_COMPLETED = true
-APP_QUEUE_REMOVE_FAILED = false
-APP_QUEUE_REMOVE_FAILED_ON_START = false
+APP_DEFAULT_QUEUE=${APP_NAME}_default
+APP_QUEUE_GROUP=
+APP_QUEUE_RETRIES=3
+APP_QUEUE_RETRY_STRATEGY=none
+APP_QUEUE_RETRY_DELAY=1000
+APP_QUEUE_JOB_CONCURRENCY=1
+APP_QUEUE_WORKERS_CONCURRENCY=1
+APP_QUEUE_REMOVE_COMPLETED=true
+APP_QUEUE_REMOVE_FAILED=false
+APP_QUEUE_REMOVE_FAILED_ON_START=false
 
-REDIS_HOST = 127.0.0.1
-REDIS_PASSWORD =
-REDIS_PORT = 6379
+KAFKA_CLIENT_ID=${APP_NAME}_kafka_client
+KAFKA_CONSUMER_GROUP_ID=${APP_NAME}_kafka_consumer
+KAFKA_BROKERS=localhost:9092
+KAFKA_DEFAULT_TOPIC=default_topic
 
-APP_CACHE_DRIVER = redis
-APP_FILE_CACHE_DIR = ./${APP_STORAGE_DIR}/cache
-APP_REDIS_CACHE_PREFIX = ${APP_NAME}_c
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=
+REDIS_PORT=6379
 
-APP_LOG_LEVEL = 3
+APP_CACHE_DRIVER=redis
+APP_FILE_CACHE_DIR=./${APP_STORAGE_DIR}/cache
+APP_REDIS_CACHE_PREFIX=${APP_NAME}_c
+
+APP_LOG_LEVEL=3
 APP_LOG_DRIVER=console,file
-APP_CLEAR_LOG_ON_START = false
-APP_FILE_LOG_DIR = ./${APP_STORAGE_DIR}/logs
+APP_CLEAR_LOG_ON_START=false
+APP_FILE_LOG_DIR=./${APP_STORAGE_DIR}/logs
