--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_PASSWORD=postgres
 DB_SCHEMA=public
 BD_DEBUG=false
 
-APP_DEFAULT_QUEUE=${APP_NAME}_default
+APP_DEFAULT_QUEUE=${APP_NAME}_queue
 APP_QUEUE_GROUP=
 APP_QUEUE_RETRIES=3
 APP_QUEUE_RETRY_STRATEGY=none
@@ -26,10 +26,10 @@ APP_QUEUE_REMOVE_COMPLETED=true
 APP_QUEUE_REMOVE_FAILED=false
 APP_QUEUE_REMOVE_FAILED_ON_START=false
 
-KAFKA_CLIENT_ID=${APP_NAME}_kafka_client
-KAFKA_CONSUMER_GROUP_ID=${APP_NAME}_kafka_consumer
 KAFKA_BROKERS=localhost:9092
-KAFKA_DEFAULT_TOPIC=default_topic
+KAFKA_CLIENT_ID=${APP_NAME}_client
+KAFKA_CONSUMER_GROUP_ID=${APP_NAME}_consumer_group
+KAFKA_DEFAULT_TOPIC=${APP_NAME}_topic
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=
