--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,10 @@ APP_QUEUE_REMOVE_FAILED_ON_START=false
 KAFKA_BROKERS=localhost:9092
 KAFKA_CLIENT_ID=${APP_NAME}_client
 KAFKA_DEFAULT_CONSUMER_GROUP_ID=${APP_NAME}_consumer_group
-KAFKA_DEFAULT_TOPIC=${APP_NAME}_topic
+KAFKA_MAX_RETRIES=3
+KAFKA_TOPICS=defaut-topic
+KAFKA_NUM_PARTITIONS=1
+KAFKA_CREATE_TOPICS_ON_START=false
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=
