--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ant/framework": "github:systemson/ant_framework",
     "compression": "^1.7.4",
     "pg": "^8.7.3",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
@@ -40,7 +40,8 @@
     "mocha": "^9.2.2",
     "nodemon": "^2.0.16",
     "nyc": "^15.1.0",
-    "pkg": "^5.6.0"
+    "pkg": "^5.6.0",
+    "ts-node": "^10.8.1"
   },
   "engines": {
     "node": "^12",
