--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "compile:win": "npm run build && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint:fix": "npx eslint ./server.ts ./src/**/* --fix",
-    "test": "mocha",
+    "test": "mocha -r ts-node/register test/**/*spec.ts --exit --timeout 10000",
     "coverage": "nyc --reporter=html npm run test"
   },
   "author": "Deivi Peña",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@ant/framework": "github:systemson/ant_framework",
+    "@types/chai-http": "^4.2.0",
+    "chai-http": "^4.3.0",
     "compression": "^1.7.4",
     "pg": "^8.8.0",
     "typescript": "^4.8.2"
