--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Deivi Peña",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@ant/framework": "github:systemson/ant_framework",
+    "@ant/framework": "github:systemson/ant_framework#v2.0",
     "@types/chai-http": "^4.2.0",
     "chai-http": "^4.3.0",
     "compression": "^1.7.4",
