--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module",
-        "warnOnUnsupportedTypeScriptVersion": false
+        "warnOnUnsupportedTypeScriptVersion": true
     },
     "plugins": [
         "@typescript-eslint"
@@ -19,7 +19,12 @@
     "rules": {
         "indent": [
             "error",
-            4
+            4,
+            {
+                "ignoredNodes": [
+                    "PropertyDefinition"
+                ]
+            }
         ],
         "one-var-declaration-per-line": [
             "error",
