--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ant/ant",
-  "version": "2.2.1",
-  "description": "NodeJS + Redis tiny microservices framework",
+  "version": "2.3.0",
+  "description": "NodeJS + Redis/Kafka tiny microservices framework",
   "type": "commonjs",
   "repository": {
     "type": "git",
@@ -27,26 +27,26 @@
     "chai-http": "^4.3.0",
     "compression": "^1.7.4",
     "pg": "^8.8.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/mocha": "^8.2.3",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "chai": "^4.3.6",
-    "eslint": "^7.32.0",
+    "eslint": "^8.24.0",
     "faker": "^5.5.3",
     "mocha": "^9.2.2",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "nyc": "^15.1.0",
     "pkg": "^5.8.0",
     "ts-node": "^10.9.1"
   },
   "engines": {
-    "node": "^12",
+    "node": "^14",
     "npm": "^6"
   },
   "nodemonConfig": {
