--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@ant/framework": "github:systemson/ant_framework#v2.0",
-    "@types/chai-http": "^4.2.0",
-    "chai-http": "^4.3.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
+    "@types/chai-http": "^4.2.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/mocha": "^8.2.3",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "chai": "^4.3.6",
-    "eslint": "^8.24.0",
-    "faker": "^5.5.3",
+    "chai-http": "^4.3.0",
+    "eslint": "^8.26.0",
     "mocha": "^9.2.2",
-    "nodemon": "^2.0.20",
     "nyc": "^15.1.0",
-    "pkg": "^5.8.0",
-    "ts-node": "^10.9.1"
+    "pkg": "^5.8.0"
   },
   "engines": {
     "node": "^14",
