Agregando compilacion de linux

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "npm run build && node ./build/server.js",
     "serve": "ts-node --transpile-only ./server.ts",
     "serve:dev": "nodemon server.ts",
-    "compile:win": "npm run build && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node12-win-x64 --compress GZip",
+    "compile:win": "npm run build && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node14-win-x64 --compress GZip",
+    "compile:lin": "npm run build && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node14-linux-x64 --compress GZip",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint:fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha -r ts-node/register test/**/*spec.ts --exit --timeout 10000",
