--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "npm run build && node ./build/server.js",
     "serve": "ts-node --transpile-only ./server.ts",
     "serve:dev": "nodemon server.ts",
-    "compile:win": "npm run build && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node14-win-x64 --compress GZip",
-    "compile:lin": "npm run build && pkg ./build/server.js --options max-old-space-size=1024 -o app --targets node14-linux-x64 --compress GZip",
+    "compile": "npm run build && pkg ./build/server.js --config compile.json -o bin/app --options max-old-space-size=1024",
     "lint": "npx eslint ./server.ts ./src/**/*",
     "lint:fix": "npx eslint ./server.ts ./src/**/* --fix",
     "test": "mocha -r ts-node/register test/**/*spec.ts --exit --timeout 10000",
@@ -26,7 +25,7 @@
     "@ant/framework": "github:systemson/ant_framework#v2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "nodemon": "^2.0.21",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
