--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ant/framework": "github:systemson/ant_framework#v2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "helmet": "^7.0.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.0",
     "ts-node": "^10.9.1",
